--- a/SuperCaculator/PaintForm/FunctionPaintForm.resx
+++ b/SuperCaculator/PaintForm/FunctionPaintForm.resx
@@ -124,7 +124,7 @@
 3. 函数图像会标明自变量的定义域，以及值域的上下限。
 4. 不支持值域达到正负无穷的函数。
 5. 若一元函数的值域包含0，则会在图像中标明F(x) = 0的直线。
-6. 一元函数绘图界面左下角标明了鼠标所在位置的点(x, y)的坐标。
+6. 一元函数绘图界面左下角标明了鼠标所在位置的点(x, y)的坐标，以及x所对应的F(x)的值（定义域内）。
 7. 二元函数绘图界面的密度指图像线条的密集程度，密度大小自左向右增大。</value>
   </data>
 </root>
