--- a/SuperCaculator/PaintForm/FunctionPaintForm.resx
+++ b/SuperCaculator/PaintForm/FunctionPaintForm.resx
@@ -133,8 +133,6 @@
 三角函数：sin  cos  tan  csc  sec  cot
 反三角函数：arcsin  arccos  arctan  arccsc  arcsec  arccot
 双曲函数：sinh  cosh  tanh  csch  sech  coth
-反双曲函数：arsinh  arcosh  artanh
-
-</value>
+反双曲函数：arsinh  arcosh  artanh</value>
   </data>
 </root>
